--- a/study_cpp/study_cpp.vcxproj
+++ b/study_cpp/study_cpp.vcxproj
@@ -139,7 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="basic.cpp" />
+    <ClCompile Include="vec_basic.cpp" />
+    <ClCompile Include="que_basic.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
