--- a/study_cpp/study_cpp.vcxproj
+++ b/study_cpp/study_cpp.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="list_basic.cpp" />
+    <ClCompile Include="list_iter.cpp" />
     <ClCompile Include="vec_basic.cpp" />
     <ClCompile Include="que_basic.cpp" />
   </ItemGroup>
