--- a/study_cpp/study_cpp.vcxproj.filters
+++ b/study_cpp/study_cpp.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="list_basic.cpp">
       <Filter>03.list</Filter>
     </ClCompile>
+    <ClCompile Include="list_iter.cpp">
+      <Filter>03.list</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
